@@ -49,6 +49,9 @@ class Graph_Controller extends System_Controller  {
             $this->is_authorized = $this->auth->is_authorized($this->data->MACRO['DISP_HOSTNAME'], $this->data->MACRO['DISP_SERVICEDESC']); 
 
             $this->title = Kohana::lang('common.service-details') . " ". $this->host ." -> " . $this->data->MACRO['DISP_SERVICEDESC'];
+        	$this->template->graph->graph_content->graph_width = ($this->data->STRUCT[0]['GRAPH_WIDTH'] + 85);
+        	$this->template->zoom_header->graph_width  = ($this->data->STRUCT[0]['GRAPH_WIDTH'] + 140);
+        	$this->template->zoom_header->graph_height = ($this->data->STRUCT[0]['GRAPH_HEIGHT'] + 230);
             // Status Box Vars
             $this->template->graph->status_box->host     = $this->data->MACRO['DISP_HOSTNAME'];
             $this->template->graph->status_box->lhost    = $this->data->MACRO['HOSTNAME'];
