@@ -16,6 +16,8 @@ class Zoom_Controller extends System_Controller  {
         $this->host              = $this->input->get('host');
         $this->service           = $this->input->get('srv');
         $this->tpl               = $this->input->get('tpl');
+        $this->graph_width       = $this->input->get('graph_width');
+        $this->graph_height      = $this->input->get('graph_height');
     }
 
     public function index()
@@ -44,8 +46,8 @@ class Zoom_Controller extends System_Controller  {
             $this->template->source  = $this->source;
             $this->template->end     = $this->end;
             $this->template->start   = $this->start;
-            $this->template->graph_height = $this->config->conf['graph_height'];
-            $this->template->graph_width  = $this->config->conf['graph_width'];
+            $this->template->graph_height = $this->graph_height;
+            $this->template->graph_width  = $this->graph_width;
         }elseif(isset($this->host) && isset($this->service)){
             if($this->start && $this->end ){
                     $this->session->set("start", $this->start);
@@ -57,8 +59,8 @@ class Zoom_Controller extends System_Controller  {
             $this->template->source  = $this->source;
             $this->template->end     = $this->end;
             $this->template->start   = $this->start;
-            $this->template->graph_height = $this->config->conf['graph_height'];
-            $this->template->graph_width  = $this->config->conf['graph_width'];
+            $this->template->graph_height = $this->graph_height;
+            $this->template->graph_width  = $this->graph_width;
         }else{
             url::redirect("/graph");
         }
